--- a/index.html
+++ b/index.html
@@ -1,12 +1,49 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>
-web developement 
-</title>
-</head>
-<body>
-<h1> Welcome to web developement</h1>
-<p>Logging in with php</p>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>web dev</title>
+    </head>
+    <body style="background-color:powderblue;">
+        <h1 style="text-align:center";> This heading is most important</h1>
+        <h2> This heading is not much important</h2>
+        <h6> This not even important</h6>
+        <img src="./assests/laptop.jpg" alt="laptop" width="500px" height="400px">
+        <p style="font-size:40px"> This is a paragraph</h1>
+        <p style="color:red;">The Amereican Embassy got my passport on hold</p>
+        <p style="font-family:verdana">Fonted paragraph with style called verdana</P>
+        <h3 style="font-family:courier"> heading with font style called courier<h3/>
+        <hr>
+        <p>Learing web is amazing with HTML</p>
+        <p style="text-align:center">Centered paragraph</p>
+        <p> This is a <b>Bold Text with <i> italic text too </p>
+        <a href="#" ><br>This is a link</a>
+        <strong><br>This text with more importance and emphasie</strong>
+        <em>emphasied text</em>
+        <button>button here</button>
+            <ul >
+                <li>Toshiba</li>
+                <li>Lenovo</li>
+                <li>Mac book</li>
+                <li>SamSung</li>
+            </ul>
+            <ol>
+                <li>Toshiba</li>
+                <li>Lenovo</li>
+                <li>SamSung</li>
+                <li>Mac Book</li>
+                <li>Hp Laptop</li>
+            </ol>
+                <!--prints exact out put as you type not ignoring anythingas <p> does-->
+                <pre>
+                    My Bonnie lies over the ocean.
+
+                    My Bonnie lies          
+                                    over the sea.
+
+                    My Bonnie lies        over the ocean.
+
+                    Oh, bring back my Bonnie to me.
+                </pre>
+    </body>
 </html>
