--- a/index.html
+++ b/index.html
@@ -45,5 +45,22 @@
 
                     Oh, bring back my Bonnie to me.
                 </pre>
+            <p> my Favourite coloe is<ins>color</ins> red</p>
+        <p> This is a <sub>scripted</sub> text </p>
+        <p> This is a <sup>Supercrited </sup> text</p>
+        <p> today is date 20<sup>th</sup> of January 2020 </p>   
+        <!--abbreviation and Quatatoin-->
+        <p><abbr title="WorldWideWeb">WWW </abbr> is the world most useful data </p>
+        <blockquote cite="www.carlifoniaa.com/data"> We are all same 
+            try to be different to win the game</blockquote>
+        <!--Adressing for contact info-->
+        <address>
+            Documented by Timz Owen<br>
+            PA at Andela Learning community<br>
+            contatc timz.owen@alcmail.ac.ke<br>
+            Kenya
+        </address>
+        <p><cite>Andela Learning Community </cite> used to site titles by browsers in Italic</p>
+        <bdo dir="rtl">Rights from right to left</bdo>
     </body>
 </html>
