--- a/index.html
+++ b/index.html
@@ -3,20 +3,37 @@
     <head>
         <meta charset="UTF-8">
         <title>web dev</title>
+        <style>
+            body{
+                background-color:yesno;
+            }
+            p{
+                color:red
+            }
+            h2{
+                color:tomato;
+            }
+        </style> 
+        <link rel="stylesheet" href="styles.css">
+        <!--External linking for css-->
+            <link rel="style" href="https://www.w3schools.com/html/styles.css"
     </head>
-    <body style="background-color:powderblue;">
+    <body >
         <h1 style="text-align:center";> This heading is most important</h1>
         <h2> This heading is not much important</h2>
         <h6> This not even important</h6>
         <img src="./assests/laptop.jpg" alt="laptop" width="500px" height="400px">
-        <p style="font-size:40px"> This is a paragraph</h1>
+        <img src="./assests/food4.jpg" alt="foods" width="500px" height="400px">
+        <img src="./assests/food3.jpg" alt="foods1" width="500px" height="400px">
+        <img src="./assests/food2.jpg" alt="food2" width="500px" height="400px"
+        <p style="font-size:40px"><br> This is a paragraph</h1>
         <p style="color:red;">The Amereican Embassy got my passport on hold</p>
         <p style="font-family:verdana">Fonted paragraph with style called verdana</P>
         <h3 style="font-family:courier"> heading with font style called courier<h3/>
         <hr>
         <p>Learing web is amazing with HTML</p>
         <p style="text-align:center">Centered paragraph</p>
-        <p> This is a <b>Bold Text with <i> italic text too </p>
+        <p> This is a <b>Bold Text with <ins> italic text too </p>
         <a href="#" ><br>This is a link</a>
         <strong><br>This text with more importance and emphasie</strong>
         <em>emphasied text</em>
@@ -45,7 +62,7 @@
 
                     Oh, bring back my Bonnie to me.
                 </pre>
-            <p> my Favourite coloe is<ins>color</ins> red</p>
+        <p> my Favourite coloe is<ins>color</ins> red</p>
         <p> This is a <sub>scripted</sub> text </p>
         <p> This is a <sup>Supercrited </sup> text</p>
         <p> today is date 20<sup>th</sup> of January 2020 </p>   
@@ -62,5 +79,16 @@
         </address>
         <p><cite>Andela Learning Community </cite> used to site titles by browsers in Italic</p>
         <bdo dir="rtl">Rights from right to left</bdo>
+        <!--Html colors used as HEX, CODE and HSL values-->
+            <h1 style="background-color:tomato;">H1 is background color of Tomato</h1>
+            <H2 style="border:2px solid DodgerBlue;">H2 with border color</h2>
+            <h3 style = "background-color: #6a5acd;">H3 has color code used</h3>
+            <p style="background-color: hsl(300, 76%, 71%);">paragraph with background color using HSL</p>
+        <!--Css Cascading Style Sheet-->
+            <!--Styling in inline, external, internal-->
+            <h1 style="color:Blue">The CSS styling here is inline using "style"</h1>
+            <p id="selection"> refer to the style using "style" from head section above</p>
+            <p class="error">for External add the "link and rel" on the head section as shown above </p>
+            
     </body>
 </html>
