--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
         <meta charset="UTF-8">
         <title>web dev</title>
         <style>
+        .cities {
+                background-color: Green;
+                color: red;
+                margin: 20px;
+                padding: 20px;
+                }
             body{
                 background-color:yesno;
             }
@@ -135,5 +141,32 @@
             <dt>Tea</dt>
                 <dd>White Tea</dd>
         </dl>
+             <!--Block, inline and Blocks using Span and div-->      
+        <div style="background-color:black;color:white;padding:20px;">
+        <h2>London</h2>
+        <p>London is the capital city of England. It is the most populous city in the United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+        <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
+        </div> 
+        <h1>My <span style="color:red">Important</span> Heading</h1>
+        <h2>The <span style="background-color:green;color:yellow;padding:10px"> OpenCodefoundations</span> is this Sartuday</h2>
+        <div class="cities">
+        <h2>London</h2>
+        <p>London is the capital of England.</p>
+        </div>
+
+        <div class="cities">
+        <h2>Paris</h2>
+        <p>Paris is the capital of France.</p>
+        </div>
+
+        <div class="cities">
+        <h2>Tokyo</h2>
+        <p>Tokyo is the capital of Japan.</p>
+        </div>
+
+        <div class="cities">
+            <h2> Laptops for sale</h2>
+            <p> With awesome specs</p>
+        </div>
     </body>
 </html>
