--- a/index.html
+++ b/index.html
@@ -168,5 +168,38 @@
             <h2> Laptops for sale</h2>
             <p> With awesome specs</p>
         </div>
+            <!--Navigation / slider images-->
+                <div class="slideshow middle">
+        <input type="radio" name="r" id="r1" checked>
+        <input type="radio" name="r" id="r2">
+        <input type="radio" name="r" id="r3">
+        <input type="radio" name="r" id="r4">
+        <input type="radio" name="r" id="r5">
+            <div class="slides">
+                <div class="slide">
+                    <img src="./assests/eldohub.png" alt="eldohub"
+                </div>
+                <div class="slide">
+                    <img src="./assests/food" alt="mentorship"
+                </div>
+                <div class="slide">
+                    <img src="./assests/eldohub1.jfif" alt="codeing"
+                </div>
+                <div class="slide">
+                    <img src="./assests/eldohub.png" alt="eldohub"
+                </div>
+                <div class="slide">
+                    <img src="./assests/eldohubi.jfif" alt="Bootcamp"
+                </div>
+            </div>
+        
+            <div class="navigation">
+                <label for="" class="bar"></label>
+                <label for="" class="bar"></label>
+                <label for="" class="bar"></label>
+                <label for="" class="bar"></label>
+                <label for="" class="bar"></label>
+            </div>
+        </div>
     </body>
 </html>
